--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="description" content="put a description here">
+        <meta name="description" content="Cool lists man!">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Title</title>
+        <title>Lists</title>
     </head>
     <body>
         <div id="app"></div>
